ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/ThirdParty__c.object-meta.xml
<CustomObject>
    <description
  >Any third party that provides additional information to verify or support an Application</description>
    <label>Third Party</label>
    <nameField>
        <label>Third Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>