ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>11 digit company ABN</description>
    <label>ABN</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>