ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <label>ACN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>