ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if Third Party is a company</description>
    <label>Company</label>
    <type>Checkbox</type>
</CustomField>