ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/RelationshipToPrimaryApplicant__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToPrimaryApplicant__c</fullName>
    <label>Relationship To Primary Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RelationshipTypes</valueSetName>
    </valueSet>
</CustomField>