ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Third Parties</relationshipLabel>
    <relationshipName>Third_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>