ctm-sf-homeloan-app/main/default/objects/ThirdParty__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Agent Vendor</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Conveyancer</fullName>
            </value>
            <value>
                <fullName>Co-Owner</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Estate Executor</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Lender Contact</fullName>
            </value>
            <value>
                <fullName>Next Of Kin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Referee</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Valuer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>